--- a/paprika.css
+++ b/paprika.css
@@ -44,7 +44,7 @@ li{
     border: 1px solid lightblue;
     width: 200px;
     height: 60px;
-    text-align: center;
+    text-align: left;
     background-color: white;
 }
 ul{
@@ -63,4 +63,8 @@ header{
 
 main{
     margin-right: 90px;
+}
+
+.jobbra{
+    float: right;
 }
